[package]
name = "esp32"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "esp32"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = [
    "esp32c6",
    "unstable",
    "defmt",
] }


esp-bootloader-esp-idf = { version = "0.4.0", features = [
    "defmt",
    "esp32c6",
] }
defmt = "1.0.1"

esp-println = { version = "0.16.1", features = [
    "esp32c6",
    "defmt-espflash",
] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32c6",
    "panic-handler",
    "defmt",
] }
critical-section = "1.2.0"
esp-hal-smartled = "0.17.0"
smart-leds = "0.4.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
