[package]
name = "esp32"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "esp32"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.1.0-rc.0", features = [
    "esp32c6",
    "unstable",
    "defmt",
] }


esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }
defmt = "1.0.1"

esp-println = { version = "0.17.0", features = ["esp32c6", "defmt-espflash"] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32c6",
    "panic-handler",
    "defmt",
] }
critical-section = "1.2.0"
# esp-hal-smartled = "0.17.0"
smart-leds = "0.4.0"
esp-radio = { version = "0.18", features = ["esp32c6", "wifi"] }
esp-alloc = { version = "0.10.0", features = ["esp32c6"] }
log = "0.4.29"
esp-rtos = { version = "0.3", features = ["esp32c6", "embassy", "esp-radio"] }
embassy-executor = "0.10.0"
embassy-net = { version = "0.9.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "dns",
] }
embedded-io-async = "0.7"
embassy-futures = "0.1.2"
embassy-time = "0.5.1"
static_cell = "2.1.1"
reqwless = { version = "0.14.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
